Created the Main Scene for the game

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Single Player Phaser Game</h1>
     <div id="phaser-game"></div>
-    <script src="js/singlephase.js"></script>
+    <script src="js/singlephase.js" type="module"></script>
 </body>
 </html>
