--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Player Phaser Game</title>
+    <title>Snake Game</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.19.0/phaser-arcade-physics.min.js"></script>
 </head>
+<style>
+    body{
+        background-color: darkgray;
+        text-align: center;
+    }
+</style>
 <body>
-    <h1>Single Player Phaser Game</h1>
-    <div id="phaser-game"></div>
+    <div id="phaser-game">
     <script src="js/singlephase.js" type="module"></script>
+    </div>
 </body>
 </html>
